# ZAFU-Paper-Formatter-Skill

./: .gitignore  LICENSE  NOTICE  README.md  SKILL.md  pyproject.toml  requirements.txt  浙江农林大学毕业论文模板参考.docx
agents/: openai.yaml
assets/: zafu_front_matter_template.docx
profiles/generic_cn_bachelor/: profile.md  rules.yaml  style_map.yaml
profiles/hybrid_fixture/: front_matter_policy.yaml  front_matter_template.docx  profile.md  rules.yaml  style_map.yaml  (+1 more)
references/: hybrid_rebuild_contract.md  local_codex_extension_points.md  numbering_systems.md  ooxml_audit_guide.md  ooxml_pitfalls.md  plan_schema.md  preflight_normalization_workflow.md  repair_architecture.md  sample_repair_plan.json  structured_ir_contract.md  template_rule_coordination.md  thesis_ir_contract.md  zafu_2022_rules.md  zafu_2022_rules.yaml
scripts/: analyze_numbering_tree.py  apply_hybrid_asset_candidates.py  apply_ooxml_fixes.py  audit_bibliography_mode.py  build_docx_from_markdown.py  build_docx_from_thesis_ir.py  build_front_matter_template.py  citation_conversion_plan.py  compare_template_rules.py  docx_ooxml.py  effective_format_audit.py  extract_source_evidence.py  extract_structured_ir.py  extract_template_baseline.py  inspect_docx.py  mathml_omml.py  plan_docx_repairs.py  preflight_semantic_normalization.py  recover_numbering.py  render_validate_docx.py  run_minimal_demo.py  run_regression_fixtures.py  select_strategy.py  thesis_format.py  thesis_ir.py  validate_docx.py  validate_thesis_ir.py  validate_visual_contracts.py  verify_skill_health.py
tests/: test_unified_thesis_ir.py
(+51 files in other folders)
