[project]
name = "thesis-docx-formatter-skill"
version = "0.1.0"
description = "Auditable thesis formatting for DOCX, Markdown, and plain-text sources."
requires-python = ">=3.11"
dependencies = [
  "latex2mathml>=3.78.0",
  "lxml>=5.0.0",
  "python-docx>=1.1.0",
  "pyyaml>=6.0.0",
]

[tool.uv]
package = false

